--- a/.github/workflows/manual_release.yml
+++ b/.github/workflows/manual_release.yml
@@ -35,16 +35,14 @@ jobs:
           # import keystore from secrets
           echo $KEYSTORE_BASE64 | base64 -d > android/app/upload-keystore.jks
           echo $KEY_PROPERTIES | base64 -d > android/key.properties
-      - run: flutter build apk --split-per-abi
-      - run: mv build/app/outputs/apk/release/app-arm64-v8a-release.apk build/app/outputs/apk/release/ConningTower-${{ inputs.tag }}-arm64-v8a-release.apk
-      - run: mv build/app/outputs/apk/release/app-armeabi-v7a-release.apk build/app/outputs/apk/release/ConningTower-${{ inputs.tag }}-armeabi-v7a-release.apk
-      - run: mv build/app/outputs/apk/release/app-x86_64-release.apk build/app/outputs/apk/release/ConningTower-${{ inputs.tag }}-x86_64-release.apk
+      - run: flutter build apk
+      - run: mv build/app/outputs/flutter-apk/app-release.apk build/app/outputs/flutter-apk/ConningTower-${{ inputs.tag }}-release.apk
       - name: Create Release
         uses: ncipollo/release-action@v1.11.2
         with:
           allowUpdates: true
           tag: ${{ inputs.tag }}
-          artifacts: "build/app/outputs/apk/release/*.apk"
+          artifacts: "build/app/outputs/flutter-apk/*.apk"
           token: ${{ secrets.ACTIONS_TOKEN }}
       - name: Telegram Message Notify
         uses: appleboy/telegram-action@v0.1.1
